# Parkin_it_polimi

./: README.md
parkin_web/: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  create_placeholders.py  main.py  pyproject.toml  requirements.txt  tox.ini  vercel.json
parkin_web/.github/: ISSUE_TEMPLATE.md
parkin_web/crud/: payment.py
parkin_web/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
parkin_web/models/: user.py
parkin_web/src/parkin_web/: __init__.py  cli.py  main.py  utils.py
parkin_web/src/parkin_web/api/: __init__.py  deps.py
parkin_web/src/parkin_web/api/routes/: __init__.py  auth.py  bookings.py  parking.py  payments.py  users.py  web.py
parkin_web/src/parkin_web/core/: __init__.py  config.py  security.py
parkin_web/src/parkin_web/crud/: __init__.py  base.py  booking.py  parking_space.py  payment.py  user.py
parkin_web/src/parkin_web/db/: base.py  base_class.py  session.py
parkin_web/src/parkin_web/models/: __init__.py  booking.py  parking_space.py  payment.py
parkin_web/src/parkin_web/schemas/: __init__.py  booking.py  parking_space.py  payment.py  token.py  user.py
parkin_web/static/css/: main.css
parkin_web/static/js/: main.js
parkin_web/templates/: about.html  base.html  contact.html  find-parking.html  index.html  list-space.html  pricing.html  register.html  security.html
parkin_web/templates/auth/: login.html
parkin_web/tests/: __init__.py  test_parkin_web.py
