[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parkin_web"
version = "0.1.0"
description = "Website project for polimi course"
readme = "README.rst"
authors = [
  {name = "Arnau Genover", email = "arnaugb2003@gmail.com"}
]
maintainers = [
  {name = "Arnau Genover", email = "arnaugb2003@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ArnauGenov/parkin_web/issues"
changelog = "https://github.com/ArnauGenov/parkin_web/blob/master/changelog.md"
homepage = "https://github.com/ArnauGenov/parkin_web"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

